aci_parser.go
// Code generated from ACIParser.g4 by ANTLR 4.13.0. DO NOT EDIT.

package antlraci // ACIParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ACIParser struct {
	*antlr.BaseParser
}

var ACIParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func aciparserParserInit() {
	staticData := &ACIParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'userdn'", "'groupdn'", "'roledn'", "'userattr'", "'groupattr'",
		"'ssf'", "'ip'", "'dns'", "'authmethod'", "'timeofday'", "'dayofweek'",
		"'target'", "'target_to'", "'target_from'", "'targetscope'", "'targetattr'",
		"'targetfilter'", "'targattrfilters'", "'targetcontrol'", "'extop'",
		"'parent'", "'\"'", "'('", "')'", "','", "';'", "'='", "'!='", "'<'",
		"'<='", "'>'", "'>='", "'&&'", "'||'", "", "'read'", "'write'", "'add'",
		"'compare'", "'search'", "'delete'", "'proxy'", "'export'", "'import'",
		"'selfwrite'", "'all'", "'none'", "'allow'", "'deny'",
	}
	staticData.SymbolicNames = []string{
		"", "BKW_UDN", "BKW_GDN", "BKW_RDN", "BKW_UAT", "BKW_GAT", "BKW_SSF",
		"BKW_IP", "BKW_DNS", "BKW_AM", "BKW_TOD", "BKW_DOW", "TKW_TARGET", "TKW_TO",
		"TKW_FROM", "TKW_SCOPE", "TKW_ATTR", "TKW_FILTER", "TKW_AF", "TKW_CTRL",
		"TKW_EXTOP", "PARENT", "DQUOTE", "LPAREN", "RPAREN", "COMMA", "SEMI",
		"EQ", "NE", "LT", "LE", "GT", "GE", "SYMBOLIC_AND", "SYMBOLIC_OR", "ANCHOR",
		"READ_PRIV", "WRITE_PRIV", "ADD_PRIV", "CMP_PRIV", "SRC_PRIV", "DEL_PRIV",
		"PRX_PRIV", "EXP_PRIV", "IMP_PRIV", "SLF_PRIV", "ALL_PRIV", "NO_PRIV",
		"ALLOW", "DENY", "WORD_AND", "WORD_OR", "WORD_NOT", "NCTF_TO_WHSP",
		"QUOTED_STRING", "WS",
	}
	staticData.RuleNames = []string{
		"parse", "instruction", "instructionAnchor", "permissionBindRule", "permission",
		"permissionDisposition", "grantedPermission", "withheldPermission",
		"privilege", "readPrivilege", "writePrivilege", "selfWritePrivilege",
		"comparePrivilege", "searchPrivilege", "proxyPrivilege", "addPrivilege",
		"deletePrivilege", "importPrivilege", "exportPrivilege", "allPrivilege",
		"noPrivilege", "targetRule", "targetOperator", "targetRules", "wordAnd",
		"wordOr", "wordNot", "bindRules", "bindRule", "expressionValues", "symbolicOr",
		"bindOperator", "lessThan", "lessThanOrEqual", "greaterThan", "greaterThanOrEqual",
		"equalTo", "notEqualTo", "bindKeyword", "bindUserDistinguishedName",
		"bindGroupDistinguishedName", "bindRoleDistinguishedName", "bindUserAttributes",
		"bindGroupAttributes", "bindSecurityStrengthFactor", "bindIPAddress",
		"bindDNSName", "bindTimeOfDay", "bindDayOfWeek", "bindAuthenticationMethod",
		"targetKeyword", "targetDistinguishedName", "targetToDistinguishedName",
		"targetFromDistinguishedName", "targetSearchScope", "targetSearchAttribute",
		"targetSearchFilter", "targetAttributeSearchFilters", "targetControlObjectIdentifier",
		"targetExtendedOperationObjectIdentifier", "openingParenthesis", "closingParenthesis",
		"commaDelimiter", "ruleTerminator", "anchor", "accessControlLabel",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ACIParserInit initializes any static state used to implement ACIParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewACIParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ACIParserInit() {
	staticData := &ACIParserParserStaticData
	staticData.once.Do(aciparserParserInit)
}

// NewACIParser produces a new parser instance for the optional input antlr.TokenStream.
func NewACIParser(input antlr.TokenStream) *ACIParser {
	ACIParserInit()
	this := new(ACIParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ACIParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ACIParser.g4"

	return this
}

// ACIParser tokens.
const (
	ACIParserEOF           = antlr.TokenEOF
	ACIParserBKW_UDN       = 1
	ACIParserBKW_GDN       = 2
	ACIParserBKW_RDN       = 3
	ACIParserBKW_UAT       = 4
	ACIParserBKW_GAT       = 5
	ACIParserBKW_SSF       = 6
	ACIParserBKW_IP        = 7
	ACIParserBKW_DNS       = 8
	ACIParserBKW_AM        = 9
	ACIParserBKW_TOD       = 10
	ACIParserBKW_DOW       = 11
	ACIParserTKW_TARGET    = 12
	ACIParserTKW_TO        = 13
	ACIParserTKW_FROM      = 14
	ACIParserTKW_SCOPE     = 15
	ACIParserTKW_ATTR      = 16
	ACIParserTKW_FILTER    = 17
	ACIParserTKW_AF        = 18
	ACIParserTKW_CTRL      = 19
	ACIParserTKW_EXTOP     = 20
	ACIParserPARENT        = 21
	ACIParserDQUOTE        = 22
	ACIParserLPAREN        = 23
	ACIParserRPAREN        = 24
	ACIParserCOMMA         = 25
	ACIParserSEMI          = 26
	ACIParserEQ            = 27
	ACIParserNE            = 28
	ACIParserLT            = 29
	ACIParserLE            = 30
	ACIParserGT            = 31
	ACIParserGE            = 32
	ACIParserSYMBOLIC_AND  = 33
	ACIParserSYMBOLIC_OR   = 34
	ACIParserANCHOR        = 35
	ACIParserREAD_PRIV     = 36
	ACIParserWRITE_PRIV    = 37
	ACIParserADD_PRIV      = 38
	ACIParserCMP_PRIV      = 39
	ACIParserSRC_PRIV      = 40
	ACIParserDEL_PRIV      = 41
	ACIParserPRX_PRIV      = 42
	ACIParserEXP_PRIV      = 43
	ACIParserIMP_PRIV      = 44
	ACIParserSLF_PRIV      = 45
	ACIParserALL_PRIV      = 46
	ACIParserNO_PRIV       = 47
	ACIParserALLOW         = 48
	ACIParserDENY          = 49
	ACIParserWORD_AND      = 50
	ACIParserWORD_OR       = 51
	ACIParserWORD_NOT      = 52
	ACIParserNCTF_TO_WHSP  = 53
	ACIParserQUOTED_STRING = 54
	ACIParserWS            = 55
)

// ACIParser rules.
const (
	ACIParserRULE_parse                                   = 0
	ACIParserRULE_instruction                             = 1
	ACIParserRULE_instructionAnchor                       = 2
	ACIParserRULE_permissionBindRule                      = 3
	ACIParserRULE_permission                              = 4
	ACIParserRULE_permissionDisposition                   = 5
	ACIParserRULE_grantedPermission                       = 6
	ACIParserRULE_withheldPermission                      = 7
	ACIParserRULE_privilege                               = 8
	ACIParserRULE_readPrivilege                           = 9
	ACIParserRULE_writePrivilege                          = 10
	ACIParserRULE_selfWritePrivilege                      = 11
	ACIParserRULE_comparePrivilege                        = 12
	ACIParserRULE_searchPrivilege                         = 13
	ACIParserRULE_proxyPrivilege                          = 14
	ACIParserRULE_addPrivilege                            = 15
	ACIParserRULE_deletePrivilege                         = 16
	ACIParserRULE_importPrivilege                         = 17
	ACIParserRULE_exportPrivilege                         = 18
	ACIParserRULE_allPrivilege                            = 19
	ACIParserRULE_noPrivilege                             = 20
	ACIParserRULE_targetRule                              = 21
	ACIParserRULE_targetOperator                          = 22
	ACIParserRULE_targetRules                             = 23
	ACIParserRULE_wordAnd                                 = 24
	ACIParserRULE_wordOr                                  = 25
	ACIParserRULE_wordNot                                 = 26
	ACIParserRULE_bindRules                               = 27
	ACIParserRULE_bindRule                                = 28
	ACIParserRULE_expressionValues                        = 29
	ACIParserRULE_symbolicOr                              = 30
	ACIParserRULE_bindOperator                            = 31
	ACIParserRULE_lessThan                                = 32
	ACIParserRULE_lessThanOrEqual                         = 33
	ACIParserRULE_greaterThan                             = 34
	ACIParserRULE_greaterThanOrEqual                      = 35
	ACIParserRULE_equalTo                                 = 36
	ACIParserRULE_notEqualTo                              = 37
	ACIParserRULE_bindKeyword                             = 38
	ACIParserRULE_bindUserDistinguishedName               = 39
	ACIParserRULE_bindGroupDistinguishedName              = 40
	ACIParserRULE_bindRoleDistinguishedName               = 41
	ACIParserRULE_bindUserAttributes                      = 42
	ACIParserRULE_bindGroupAttributes                     = 43
	ACIParserRULE_bindSecurityStrengthFactor              = 44
	ACIParserRULE_bindIPAddress                           = 45
	ACIParserRULE_bindDNSName                             = 46
	ACIParserRULE_bindTimeOfDay                           = 47
	ACIParserRULE_bindDayOfWeek                           = 48
	ACIParserRULE_bindAuthenticationMethod                = 49
	ACIParserRULE_targetKeyword                           = 50
	ACIParserRULE_targetDistinguishedName                 = 51
	ACIParserRULE_targetToDistinguishedName               = 52
	ACIParserRULE_targetFromDistinguishedName             = 53
	ACIParserRULE_targetSearchScope                       = 54
	ACIParserRULE_targetSearchAttribute                   = 55
	ACIParserRULE_targetSearchFilter                      = 56
	ACIParserRULE_targetAttributeSearchFilters            = 57
	ACIParserRULE_targetControlObjectIdentifier           = 58
	ACIParserRULE_targetExtendedOperationObjectIdentifier = 59
	ACIParserRULE_openingParenthesis                      = 60
	ACIParserRULE_closingParenthesis                      = 61
	ACIParserRULE_commaDelimiter                          = 62
	ACIParserRULE_ruleTerminator                          = 63
	ACIParserRULE_anchor                                  = 64
	ACIParserRULE_accessControlLabel                      = 65
)

// IParseContext is an interface to support dynamic dispatch.
type IParseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Instruction() IInstructionContext
	EOF() antlr.TerminalNode

	// IsParseContext differentiates from other interfaces.
	IsParseContext()
}

type ParseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParseContext() *ParseContext {
	var p = new(ParseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ACIParserRULE_parse
	return p
}

func InitEmptyParseContext(p *ParseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ACIParserRULE_parse
}

func (*ParseContext) IsParseContext() {}

func NewParseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParseContext {
	var p = new(ParseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ACIParserRULE_parse

	return p
}

func (s *ParseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParseContext) Instruction() IInstructionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstructionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstructionContext)
}

func (s *ParseContext) EOF() antlr.TerminalNode {
	return s.GetToken(ACIParserEOF, 0)
}

func (s *ParseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ACIParserListener); ok {
		listenerT.EnterParse(s)
	}
}

func (s *ParseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ACIParserListener); ok {
		listenerT.ExitParse(s)
	}
}

func (p *ACIParser) Parse() (localctx IParseContext) {
	localctx = NewParseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ACIParserRULE_parse)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(132)
		p.Instruction()
	}
	{
		p.SetState(133)
		p.Match(ACIParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInstructionContext is an interface to support dynamic dispatch.
type IInstructionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	OpeningParenthesis() IOpeningParenthesisContext
	InstructionAnchor() IInstructionAnchorContext
	ClosingParenthesis() IClosingParenthesisContext
	TargetRules() ITargetRulesContext
	AllPermissionBindRule() []IPermissionBindRuleContext
	PermissionBindRule(i int) IPermissionBindRuleContext

	// IsInstructionContext differentiates from other interfaces.
	IsInstructionContext()
}

type InstructionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstructionContext() *InstructionContext {
	var p = new(InstructionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ACIParserRULE_instruction
	return p
}

func InitEmptyInstructionContext(p *InstructionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ACIParserRULE_instruction
}

func (*InstructionContext) IsInstructionContext() {}

func NewInstructionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InstructionContext {
	var p = new(InstructionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ACIParserRULE_instruction

	return p
}

func (s *InstructionContext) GetParser() antlr.Parser { return s.parser }

func (s *InstructionContext) OpeningParenthesis() IOpeningParenthesisContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOpeningParenthesisContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOpeningParenthesisContext)
}

func (s *InstructionContext) InstructionAnchor() IInstructionAnchorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstructionAnchorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstructionAnchorContext)
}

func (s *InstructionContext) ClosingParenthesis() IClosingParenthesisContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClosingParenthesisContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClosingParenthesisContext)
}

func (s *InstructionContext) TargetRules() ITargetRulesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITargetRulesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITargetRulesContext)
}

func (s *InstructionContext) AllPermissionBindRule() []IPermissionBindRuleContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPermissionBindRuleContext); ok {
			len++
		}
	}

	tst := make([]IPermissionBindRuleContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPermissionBindRuleContext); ok {
			tst[i] = t.(IPermissionBindRuleContext)
			i++
		}
	}

	return tst
}

func (s *InstructionContext) PermissionBindRule(i int) IPermissionBindRuleContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPermissionBindRuleContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPermissionBindRuleContext)
}

func (s *InstructionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstructionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InstructionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ACIParserListener); ok {
		listenerT.EnterInstruction(s)
	}
}

func (s *InstructionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ACIParserListener); ok {
		listenerT.ExitInstruction(s)
	}
}

func (p *ACIParser) Instruction() (localctx IInstructionContext) {
	localctx = NewInstructionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ACIParserRULE_instruction)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(136)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(135)
			p.TargetRules()
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}
	{
		p.SetState(138)
		p.OpeningParenthesis()
	}
	{
		p.SetState(139)
		p.InstructionAnchor()
	}
	p.SetState(141)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == ACIParserALLOW || _la == ACIParserDENY {
		{
			p.SetState(140)
			p.PermissionBindRule()
		}

		p.SetState(143)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(145)
		p.ClosingParenthesis()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInstructionAnchorContext is an interface to support dynamic dispatch.
type IInstructionAnchorContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Anchor() IAnchorContext
	AccessControlLabel() IAccessControlLabelContext
	RuleTerminator() IRuleTerminatorContext

	// IsInstructionAnchorContext differentiates from other interfaces.
	IsInstructionAnchorContext()
}

type InstructionAnchorContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstructionAnchorContext() *InstructionAnchorContext {
	var p = new(InstructionAnchorContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ACIParserRULE_instructionAnchor
	return p
}

func InitEmptyInstructionAnchorContext(p *InstructionAnchorContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ACIParserRULE_instructionAnchor
}

func (*InstructionAnchorContext) IsInstructionAnchorContext() {}

func NewInstructionAnchorContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InstructionAnchorContext {
	var p = new(InstructionAnchorContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ACIParserRULE_instructionAnchor

	return p
}

func (s *InstructionAnchorContext) GetParser() antlr.Parser { return s.parser }

func (s *InstructionAnchorContext) Anchor() IAnchorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAnchorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAnchorContext)
}

func (s *InstructionAnchorContext) AccessControlLabel() IAccessControlLabelContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAccessControlLabelContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAccessControlLabelContext)
}

func (s *InstructionAnchorContext) RuleTerminator() IRuleTerminatorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleTerminatorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleTerminatorContext)
}

func (s *InstructionAnchorContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstructionAnchorContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InstructionAnchorContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ACIParserListener); ok {
		listenerT.EnterInstructionAnchor(s)
	}
}

func (s *InstructionAnchorContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ACIParserListener); ok {
		listenerT.ExitInstructionAnchor(s)
	}
}

func (p *ACIParser) InstructionAnchor() (localctx IInstructionAnchorContext) {
	localctx = NewInstructionAnchorContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ACIParserRULE_instructionAnchor)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(147)
		p.Anchor()
	}
	{
		p.SetState(148)
		p.AccessControlLabel()
	}
	{
		p.SetState(149)
		p.RuleTerminator()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPermissionBindRuleContext is an interface to support dynamic dispatch.
type IPermissionBindRuleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Permission() IPermissionContext
	BindRules() IBindRulesContext
	RuleTerminator() IRuleTerminatorContext

	// IsPermissionBindRuleContext differentiates from other interfaces.
	IsPermissionBindRuleContext()
}

type PermissionBindRuleContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPermissionBindRuleContext() *PermissionBindRuleContext {
	var p = new(PermissionBindRuleContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ACIParserRULE_permissionBindRule
	return p
}
